# ragent

./: .gitignore  Cargo.toml  MINIMAX-2.7_output.md  NETWORK_ACCESS.md  PHASE_1.md  PLAN.md  PLAN_CRITIQUE.md  README.md  Vulkan_Support_Attempt.md
.github/: copilot-instructions.md
Tempragent-target/: .rustc_info.json
Tempragent-target/debug/.fingerprint/bytes-6b4b89b8a9102e13/: output-lib-bytes
Tempragent-target/debug/.fingerprint/cfg-if-c10b8f8d7afa6d9b/: output-lib-cfg_if
Tempragent-target/debug/.fingerprint/futures-core-f41b574dea1bf0fd/: output-lib-futures_core
Tempragent-target/debug/.fingerprint/parking_lot_core-73efd9575891a9e8/: output-build-script-build-script-build
Tempragent-target/debug/.fingerprint/pin-project-lite-7660bc13d3514849/: output-lib-pin_project_lite
Tempragent-target/debug/.fingerprint/proc-macro2-bb9a0a987abbf690/: output-build-script-build-script-build
Tempragent-target/debug/.fingerprint/quote-e63bd76c32121b3b/: output-build-script-build-script-build
Tempragent-target/debug/.fingerprint/scopeguard-f18d1fd826751b61/: output-lib-scopeguard
Tempragent-target/debug/.fingerprint/smallvec-e38e5931eb1ce7f4/: output-lib-smallvec
Tempragent-target/debug/.fingerprint/stable_deref_trait-9d4450f79c037bc4/: output-lib-stable_deref_trait
config/: default.toml
src/: config.rs  lib.rs  main.rs
src/agent/: agent_loop.rs  message.rs  mod.rs  project_context.rs  skill.rs
src/llm/: mod.rs  ollama.rs  openai.rs  traits.rs
src/tools/: file_ops.rs  file_patch.rs  mod.rs  registry.rs  shell.rs  traits.rs
(+2 files in other folders)
